--- a/viral/index.html
+++ b/viral/index.html
@@ -78,6 +78,16 @@
       text-align:center;
     }
   </style>
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'ec629106d819ccf2bda1ce97153afebe',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/ec629106d819ccf2bda1ce97153afebe/invoke.js"></script>
 </head>
 <body>
   <div class="wrap">
