--- a/viral/index.html
+++ b/viral/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F00NF909N7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-F00NF909N7');
+</script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>event — 2048 Global</title>
@@ -78,6 +87,8 @@
       text-align:center;
     }
   </style>
+</head>
+<body>
 <script type="text/javascript">
 	atOptions = {
 		'key' : 'ec629106d819ccf2bda1ce97153afebe',
@@ -88,8 +99,6 @@
 	};
 </script>
 <script type="text/javascript" src="//www.highperformanceformat.com/ec629106d819ccf2bda1ce97153afebe/invoke.js"></script>
-</head>
-<body>
   <div class="wrap">
     <header>
       <h1>Event</h1>
