--- a/viral/index.html
+++ b/viral/index.html
@@ -123,7 +123,7 @@
         </li>
       </ol>
 
-      <p>🎉 July Winner: Congratulations to Tay***!!</p>
+      <p>🎉 August Winner is ??!!!</p>
 
       <footer>
 <script type="text/javascript">
